			CHANGELOG for KAME kit
$KAME: CHANGELOG,v 1.2814 2006/02/23 16:40:17 jinmei Exp $

<200602>
2006-02-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/sys/netinet6/icmp6.c (icmp6_redirect_input): fixed a bug
	that a Redirect couldn't be processed correctly if the original
	packet contained an extension header.
	Pointed out by: Qing Li

2006-02-11  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c (mld_state_change_report)
	fixed a bug that no MLDv2 report is advertised when host state changes 
	from IN/EX to EX/IN, respectively.
	Reported by: Yu-Jung Lee

2006-02-01  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/kern/uipc_mbuf.c (m_pullup): fixed memory leak when
	the original mbuf had an mtag and the pull-up operation required
	allocating a new mbuf.
	Reported by: Garfield Hsieh

<200601>
2006-01-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/{icmp6.c, in6.[ch]}: not reply an ICMPv6 Error
	message for a packet from an obvious anycast address.

2006-01-09  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd5/sys/netinet6/in6_pcb.c (in6_{set,peer}sockaddr):
	converted embedded scope zone IDs into the sin6_scope_id field
	appropriately.
	Reported by: Susan.Lan

<200511>
2005-11-29  Tsuyoshi MOMOSE  <momose@az.jp.nec.com>
	* kame/kame/shisad, kame/sys/netinet6/{mip6.c,nd6_nbr.c}:
	Proxy DAD on a home agent is supported.

<200510>
2005-10-17  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/kame/rtadvd/config.c, rtadvd.[ch]: not reinitialize
	the host-variables in kernel to the ones at the start-up time,
	since RA is a stateless autoconfiguration protocol.
	Suggested by: Hideaki YOSHIFUJI

2005-10-15  SUZUKI, Shinsuke <suz@alaxala.net>
	* kame/sys/netinet6/mldv2.c: fixed a MLDv2-kernel crash when 
	  an inappropriate address is given to IPV6_JOIN_GROUP API

2005-10-15  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* raw_ip6.c (rip6_attach): caught failure of MALLOC for