@@ -1,5 +1,10 @@
 			CHANGELOG for KAME kit
-$KAME: CHANGELOG,v 1.2814 2006/02/23 16:40:17 jinmei Exp $
+$KAME: CHANGELOG,v 1.2815 2006/03/03 04:03:39 suz Exp $
+
+<200603>
+2006-03-03  SUZUKI, Shinsuke <suz@alaxala.net>
+	* kame/sys/netinet6/mldv2.c (mld_state_change_report)
+	an update to the fix in Feb 11, 2006
 
 <200602>
 2006-02-24  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
